# multi-agent-RAG-Debate-Arena

./: .gitignore  README.md  railway.toml
backend/: .env.example  .gitignore  agents.py  auth.py  chunking.py  config.py  debate.py  embeddings.py  main.py  models.py  pyproject.toml  railway.toml  vectorstore.py  wikipedia_service.py
frontend/: app.js  index.html  style.css
