[project]
name = "debate-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.113.0",
    "fastapi>=0.138.2",
    "httpx[http2]>=0.28.1",
    "langchain-text-splitters>=1.1.2",
    "pinecone>=9.1.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
    "voyageai>=0.4.1",
]
